# GitVersionInfo

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: git-sync.yml
packaging/: CMakeLists.txt  GitVersionInfoConfig.cmake.in
src/: CMakeLists.txt
src/cmake/: CMakeLists.txt  GitVersionInfo.cmake
tests/: CMakeLists.txt  add-compile-definitions_test-case-01.cmake  add-compile-definitions_test-case-01_cleanup.cmake  add-compile-definitions_test-case-01_setup.cmake  add-compile-definitions_test-case-02.cmake  add-compile-definitions_test-case-02_cleanup.cmake  add-compile-definitions_test-case-02_setup.cmake  add-dependants_test-case-01.cmake  add-dependants_test-case-01_cleanup.cmake  add-dependants_test-case-01_setup.cmake  add-dependants_test-case-02.cmake  add-dependants_test-case-02_cleanup.cmake  add-dependants_test-case-02_setup.cmake  check-for-git_test-case-01.cmake  check-for-git_test-case-02.cmake  file-names_test-case-01.cmake  file-names_test-case-02.cmake  file-names_test-case-02_cleanup.cmake  test-repository-cleanup.cmake  test-repository-setup.cmake  toplevel-hash_test-case-01.cmake  toplevel-hash_test-case-02.cmake
tests/header-test-mock-project/: CMakeLists.txt  header_test_01.c  header_test_02.c
tests/helpers/: assertions.cmake  test_case_wrapper.cmake
tests/trigger-test-mock-project/: CMakeLists.txt  CMakePresets.json  trigger_test.c
